home.html and about.html page work done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Zay Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,35 +22,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
-      .heading-sec {
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-      }
-
-      .heading-sec h1 {
-        font-size: 48px;
-        font-weight: 200;
-      }
-      .heading-sec p {
-        font-size: 20px;
-        font-weight: 200;
-      }
-
-      .card {
-        /* width: 30%; */
-        border: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-      }
-
-      .card h3 {
-        font-size: 20px;
-      }
+      
     </style>
   </head>
   <body>
@@ -79,10 +51,10 @@
             </div>
             <div class="nav">
               <ul class="d-flex column-gap-5">
-                <li><a class="nav-hover" href="">Home</a></li>
-                <li><a class="nav-hover" href="">About</a></li>
-                <li><a class="nav-hover" href="">Shop</a></li>
-                <li><a class="nav-hover" href="">Contact</a></li>
+                <li><a class="nav-hover" href="./index.html">Home</a></li>
+                <li><a class="nav-hover" href="./about.html">About</a></li>
+                <li><a class="nav-hover" href="./shop.html">Shop</a></li>
+                <li><a class="nav-hover" href="./contact.html">Contact</a></li>
               </ul>
             </div>
             <div class="icons">
@@ -130,24 +102,28 @@
               class="carousel-item active bg-gray px-5 py-5 height-90"
               data-bs-interval="10000"
             >
-              <div class="container pt-5 d-flex justify-content-between column-gap-4 align-items-center px-5">
+              <div
+                class="container pt-5 d-flex justify-content-between column-gap-4 align-items-center px-5"
+              >
                 <div class="slider-content">
-                  <h1 class="frist-slider-heading"><span>Zay</span> eCommerce</h1>
+                  <h1 class="frist-slider-heading">
+                    <span>Zay</span> eCommerce
+                  </h1>
                   <h2>Tiny and Perfect eCommerce Template</h2>
                   <p class="frist-slider-text">
                     Zay Shop is an eCommerce HTML5 CSS template with latest
                     version of Bootstrap 5 (beta 1). This template is 100% free
-                    provided by <a href="#">TemplateMo</a> website. Image credits
-                    go to <a href="#">Freepik Stories, Unsplash</a> and
+                    provided by <a href="#">TemplateMo</a> website. Image
+                    credits go to <a href="#">Freepik Stories, Unsplash</a> and
                     <a href="#">Icons 8.</a>
                   </p>
                 </div>
                 <div class="slider-img">
-                    <img
-                  src="./images/shoes-screenshort.png"
-                  class="d-block w-100"
-                  alt="..."
-                />
+                  <img
+                    src="./images/shoes-screenshort.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
                 </div>
               </div>
             </div>
@@ -155,38 +131,48 @@
               class="carousel-item bg-gray px-5 py-5 height-90"
               data-bs-interval="2000"
             >
-              <div class="container d-flex justify-content-between column-gap-4 align-items-center px-5">
+              <div
+                class="container d-flex justify-content-between column-gap-4 align-items-center px-5"
+              >
                 <div class="slider-content">
                   <h1>Proident occaecat</h1>
                   <h2>Aliquip ex ea commodo consequat</h2>
                   <p>
-                    You are permitted to use this Zay CSS template for your commercial websites. You are not permitted to re-distribute the template ZIP file in any kind of template collection websites.
+                    You are permitted to use this Zay CSS template for your
+                    commercial websites. You are not permitted to re-distribute
+                    the template ZIP file in any kind of template collection
+                    websites.
                   </p>
                 </div>
                 <div class="slider-img">
-                    <img
-                  src="./images/bottle-screenshort.png"
-                  class="d-block w-100 sliders-img"
-                  alt="..."
-                />
+                  <img
+                    src="./images/bottle-screenshort.png"
+                    class="d-block w-100 sliders-img"
+                    alt="..."
+                  />
                 </div>
               </div>
             </div>
             <div class="carousel-item bg-gray px-5 py-5 height-90">
-              <div class="container d-flex justify-content-between column-gap-4 px-5 align-items-center">
+              <div
+                class="container d-flex justify-content-between column-gap-4 px-5 align-items-center"
+              >
                 <div class="slider-content">
                   <h1>Repr in voluptate</h1>
                   <h2>Ullamco laboris nisi ut</h2>
                   <p>
-                    We bring you 100% free CSS templates for your websites. If you wish to support TemplateMo, please make a small contribution via PayPal or tell your friends about our website. Thank you.
+                    We bring you 100% free CSS templates for your websites. If
+                    you wish to support TemplateMo, please make a small
+                    contribution via PayPal or tell your friends about our
+                    website. Thank you.
                   </p>
                 </div>
                 <div class="slider-img">
-                    <img
-                  src="./images/lamp-screenshort.png"
-                  class="d-block w-100 sliders-img"
-                  alt="..."
-                />
+                  <img
+                    src="./images/lamp-screenshort.png"
+                    class="d-block w-100 sliders-img"
+                    alt="..."
+                  />
                 </div>
               </div>
             </div>
@@ -206,37 +192,247 @@
             data-bs-target="#carouselExampleInterval"
             data-bs-slide="next"
           >
-            <span class="carousel-control-next-icon bg-green" aria-hidden="true"></span>
+            <span
+              class="carousel-control-next-icon bg-green"
+              aria-hidden="true"
+            ></span>
             <span class="visually-hidden bg-green">Next</span>
           </button>
         </div>
       </div>
       <div class="section-2">
         <div class="container d-flex row-gap-5 flex-column py-4 my-5">
-            <div class="heading-sec container">
-                <h1>Categories of The Month</h1>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="heading-sec container">
+            <h1>Categories of The Month</h1>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+          <div
+            class="cards d-flex justify-content-between align-items-center px-4"
+          >
+            <div class="card">
+              <img src="./images/watch.png" alt="" />
+              <h3>Watches</h3>
+              <button type="button" class="btn btn-success">Go Shop</button>
             </div>
-            <div class="cards d-flex justify-content-between align-items-center px-4">
-                <div class="card">
-                    <img src="./images/watch.png" alt="">
-                    <h3>Watches</h3>
-                    <button type="button" class="btn btn-success">Go Shop</button>
-                </div>
-                <div class="card">
-                    <img src="./images/shoes-card.png" alt="">
-                    <h3>Shoes</h3>
-                    <button type="button" class="btn btn-success">Go Shop</button>
-                </div>
-                <div class="card">
-                    <img src="./images/glasses.png" alt="">
-                    <h3>Accessories</h3>
-                    <button type="button" class="btn btn-success">Go Shop</button>
-                </div>
+            <div class="card">
+              <img src="./images/shoes-card.png" alt="" />
+              <h3>Shoes</h3>
+              <button type="button" class="btn btn-success">Go Shop</button>
             </div>
+            <div class="card">
+              <img src="./images/glasses.png" alt="" />
+              <h3>Accessories</h3>
+              <button type="button" class="btn btn-success">Go Shop</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section-3">
+        <div class="container d-flex flex-column py-5">
+          <div class="section-3-header container">
+            <h1>Featured Product</h1>
+            <p>
+              Reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+            </p>
+          </div>
+          <div
+            class="section-3-cards mt-4 d-flex justify-content-between align-items-center"
+          >
+            <div class="card-sec">
+              <div class="img">
+                <img src="./images/card-1.png" alt="" />
+              </div>
+              <div class="section-3-content pt-3 pb-4 px-3">
+                <div
+                  class="pb-3 d-flex justify-content-between align-items-center"
+                >
+                  <div class="star-icon">
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star gray"></i>
+                    <i class="fa-solid fa-star gray"></i>
+                  </div>
+                  <div>
+                    <span class="rate">$240.00</span>
+                  </div>
+                </div>
+                <div class="contant">
+                  <h3>Gym Weight</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sunt in culpa qui officia deserunt.
+                  </p>
+                </div>
+                <div class="card-last">
+                  <p class="rate">Reviews (24)</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-sec">
+              <div class="img">
+                <img src="./images/card-2.png" alt="" />
+              </div>
+              <div class="section-3-content pt-3 pb-4 px-3">
+                <div
+                  class="pb-3 d-flex justify-content-between align-items-center"
+                >
+                  <div class="star-icon">
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star gray"></i>
+                    <i class="fa-solid fa-star gray"></i>
+                  </div>
+                  <div>
+                    <span class="rate">$480.00</span>
+                  </div>
+                </div>
+                <div class="contant">
+                  <h3>Cloud Nike Shoes</h3>
+                  <p>
+                    Aenean gravida dignissim finibus. Nullam ipsum diam, posuere
+                    vitae pharetra sed, commodo ullamcorper.
+                  </p>
+                </div>
+                <div class="card-last">
+                  <p class="rate">Reviews (48)</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-sec">
+              <div class="img">
+                <img src="./images/card-3.png" alt="" />
+              </div>
+              <div class="section-3-content pt-3 pb-4 px-3">
+                <div
+                  class="pb-3 d-flex justify-content-between align-items-center"
+                >
+                  <div class="star-icon">
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                    <i class="fa-solid fa-star yellow"></i>
+                  </div>
+                  <div>
+                    <span class="rate">$360.00</span>
+                  </div>
+                </div>
+                <div class="contant">
+                  <h3>Summer Addides Shoes</h3>
+                  <p>
+                    Curabitur ac mi sit amet diam luctus porta. Phasellus
+                    pulvinar sagittis diam, et scelerisque ipsum lobortis nec.
+                  </p>
+                </div>
+                <div class="card-last">
+                  <p class="rate">Reviews (74)</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer-top py-5">
+        <div class="container d-flex flex-column">
+          <div class="details d-flex justify-content-between">
+            <div class="details-child">
+              <h2 class="green">Zay Shop</h2>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#"
+                  ><i class="fa-duotone fa-solid fa-location-dot"></i>123
+                  Consectetur at ligula 10660</a
+                >
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#"><i class="fa-solid fa-phone"></i>010-020-0340</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#"
+                  ><i class="fa-solid fa-envelope"></i>info@company.com</a
+                >
+              </div>
+            </div>
+            <div class="details-child">
+              <h2 class="white">Products</h2>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Luxury</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Sport Wear</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Men's Shoes</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Women's Shoes</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Popular Dress</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Gym Accessories</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Sport Shoes</a>
+              </div>
+            </div>
+            <div class="details-child">
+              <h2 class="white">Further Info</h2>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Home</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">About Us</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Shop Locations</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">FAQs</a>
+              </div>
+              <div class="d-flex align-items-center row-gap-5 pt-2">
+                <a href="#">Contact</a>
+              </div>
+            </div>
+          </div>
+          <div
+            class="follow d-flex justify-content-between align-items-center pt-4 mt-4"
+          >
+            <div class="follow-icons d-flex column-gap-3">
+              <div class="follow-icon d-flex justify-content-center align-items-center">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              </div>
+              <div class="follow-icon d-flex justify-content-center align-items-center">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              </div>
+              <div class="follow-icon d-flex justify-content-center align-items-center">
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              </div>
+              <div class="follow-icon d-flex justify-content-center align-items-center">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="follow-singup d-flex">
+              <input type="text" placeholder="Email address">
+              <button>Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container py-3">
+          <p>Copyright © 2021 Company Name | Designed by <a href="">TemplateMo</a></p>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
